
  * Make better use of context managers, fixing various resource leaks.
  * Remove unused imports from tests.
  * Use logging.warning rather than the deprecated logging.warn.
  * Skip TestCloneUpgrade.test_clone_upgrade_regression; this is a
    regression test against a tarball created based on a specific (now
    obsolete) version of Ubuntu, and will need considerable effort to
    update.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 15 Feb 2013 13:37:26 +0000

apt-clone (0.3.1~ubuntu3) raring; urgency=low

  * Do not include subdirectories in /etc/apt/sources.list.d/ (LP: #1077113)

 -- Brian Murray <brian@ubuntu.com>  Fri, 25 Jan 2013 13:47:56 -0800

apt-clone (0.3.1~ubuntu2) raring; urgency=low

  * Added XS-Testsuite header
  * Fixed ownership of testsuite data files
  * Redirected test stderr to stdout. python unittest output goes to stderr
    which adt-run considers as a failure. 

 -- Jean-Baptiste Lallement <jean-baptiste.lallement@canonical.com>  Thu, 13 Dec 2012 16:20:02 +0100

apt-clone (0.3.1~ubuntu1) raring; urgency=low

  * Make sure #!/usr/bin/python3 is used, since dh_python3 stopped
    overriding it.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Tue, 06 Nov 2012 14:54:54 +0000

apt-clone (0.3) experimental; urgency=low

  [ Michael Vogt ]
  * apt_clone.py:
    - implement a show-diff option allowing one to see the differences
      between a system and a clone file
    - fix restoring of the clone with later apt versions (thanks
      to Colin Watson)
    - bind mount /proc, /sys on restore to chroot (thanks to
      Colin Watson)
  * add dep8 style testsuite

  [ Colin Watson ]
  * Port to Python 3:
    - Use Python 3-style print functions.
    - Use "raise Exception(value)" syntax rather than the old-style "raise
      Exception, value".
    - Use dict.items() rather than dict.iteritems().

  [ Evan Dandrea ]
  * Finish port to Python 3:
    - Handle unicode changes.
    - Do not leak file descriptors.